# regex_folder_macro

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: load_regex_files.md
examples/: event.rs
src/: lib.rs
tests/: test.rs
tests/regex/: Event.re
tests/samples/: events.txt
