[package]
name = "regex_folder_macro"
description = "Generate code from regular expressions inside a folder with files ending in .re."
repository = "https://github.com/huncholane/regex_folder_macro"
license = "MIT"
documentation = "https://docs.rs/regex_folder_macro"
homepage = "https://github.com/huncholane/regex_folder_macro"
version = "1.0.0"
edition = "2021"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.0"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[lib]
proc-macro = true
